site.css
body {
        background-image: url("./Jumbo.jpg");
        background-repeat: no-repeat, repeat;
        background-color: #cccccc;
        background-size: cover;
        z-index: 1;
        margin: 0;
        font-family: Georgia, serif;
        font-style: italic;
    }

#link{
        word-wrap: break-word;
        width: 70%;
    }


.aa {
        width:252px; 
        height:132px;

    }  
#wrap {
        min-height: 400px;
        width: 100%;
        display:flex;
        flex-flow:row wrap;
        justify-content:flex-start;
        align-content:space-between;
        align-items:flex-start;

    }   
#wraptext {
        width:100%;
        height:30%;
    }

.flexi {
       width:25%;
       min-height: 400px;
       display: inline-flex; 
       flex-flow: row wrap;
       background-image: url("./paper.jpg");
       background-repeat: no-repeat, repeat;
       background-size: cover;
       font-size: 12px;
       cursor: pointer; 
       opacity: 0.9;
    } 
.form-inline {
       position: center;
    } 
#working  {
       display: block;
       margin-left: auto;
       margin-right: auto;
       margin-top: 50px;
       opacity: 0.5;
    } 
h3,h1 {
       text-align: center;
       margin-left: 5px;
       margin-right: 5px;
      
    } 
p {
       text-align: center;
       margin-left: 5px;
       margin-right: 5px;
       
    }   
#imm {
       display: block;
       position: relative;
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 5px;
       margin-top: auto;
    } 
 #msg,#msg1 {
       width:350px;
       margin-left: 50px;
    }  
#main {
       margin-bottom: 40px;
    }
.footer {
      position: fixed;
      left: 0;
      bottom: 0;
      height: 40px;
      width: 100%;
      color: white;
      text-align: center;
      background-image: url("./paperhead.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
    } 
 .header {
      padding: 10px 16px;
      background-image: url("./paperhead.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
    } 
 #logo {
    
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-top: 10px;
      opacity: 0.3;
      width:574px;
      height: 94px;
    }
.page {
      display: flex;
        }

.flex-container {
      width: 100%;
      display:flex;
      flex-flow: row wrap;
    }
.collapsible {
      color: #444;
      cursor: pointer;
      padding: 18px;
      width: 100%;
      border: none;
      text-align: center;
      outline: none;
      font-size: 15px;
      height:20px;
    }
.content {
      padding: 0 18px;
      overflow: hidden;
      background-color: yellow;
      font-size: 14px;
    } 
@media screen and (max-width: 320px) {
    .flexi {  
      width:100%;
       min-height: 400px;
       display: inline-flex; 
       flex-flow: row wrap;
       background-image: url("./paper.jpg");
       background-repeat: no-repeat, repeat;
       background-size: cover;
       font-size: 12px;
       cursor: pointer; 
       opacity: 0.9;
       overflow: hidden;
       word-break: break-all;
       hyphens: auto;
      -ms-hyphens: auto;
      -moz-hyphens: auto;
    } 
    #logo {
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-top: 10px;
      opacity: 0.3;
      width:100px;
      height: 18px;
    }  
     .header {
      /*padding: 10px 16px;*/
      background-image: url("./paperhead.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
      width: 100%;
    } 
    #wrap {
      min-height: 400px;
      width: 100%;
      display:flex;
      flex-flow:row wrap;
      justify-content:flex-start;
      align-content:space-between;
      align-items:flex-start;

    }   
    #wraptext {
        width:100%;
        height:30%;
    }
    #msg,#msg1 {
      width:50px;
      margin-left: 20px;
    }    
    body {
      width: 100%;	
      background-image: url("./Jumbo.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
      z-index: 1;
      margin: 0;
      font-family: Georgia, serif;
      font-style: italic;
    }
}   


@media screen and (min-width: 321px) and (max-width: 480px) {
    .flexi {  
      width:100%;
       min-height: 400px;
       display: inline-flex; 
       flex-flow: row wrap;
       background-image: url("./paper.jpg");
       background-repeat: no-repeat, repeat;
       background-size: cover;
       font-size: 12px;
       cursor: pointer; 
       opacity: 0.9;
       overflow: hidden;
       word-break: break-all;
       hyphens: auto;
      -ms-hyphens: auto;
      -moz-hyphens: auto;
    } 
    #logo {
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-top: 10px;
      opacity: 0.3;
      width:150px;
      height: 30px;
    }  
     .header {
      /*padding: 10px 16px;*/
      background-image: url("./paperhead.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
      width: 100%;
    } 
    #wrap {
      min-height: 400px;
      width: 100%;
      display:flex;
      flex-flow:row wrap;
      justify-content:flex-start;
      align-content:space-between;
      align-items:flex-start;

    }   
    #wraptext {
        width:100%;
        height:30%;
    }
    #msg,#msg1 {
      width:50px;
      margin-left: 20px;
    }    
    body {
      width: 100%;	
      background-image: url("./Jumbo.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
      z-index: 1;
      margin: 0;
      font-family: Georgia, serif;
      font-style: italic;
    }
}


@media screen and (min-width: 480px) and (max-width: 1024px) {
	.flexi {  
      width:50%;
       min-height: 400px;
       display: inline-flex; 
       flex-flow: row wrap;
       background-image: url("./paper.jpg");
       background-repeat: no-repeat, repeat;
       background-size: cover;
       font-size: 12px;
       cursor: pointer; 
       opacity: 0.9;
       overflow: hidden;
       word-break: break-all;
       hyphens: auto;
      -ms-hyphens: auto;
      -moz-hyphens: auto;
    } 
    #logo {
      display: block;
      margin-left: auto;
      margin-right: auto;
      margin-top: 10px;
      opacity: 0.3;
      width:230px;
      height: 55px;
    }  
     .header {
    /*  padding: 10px 16px;*/
      background-image: url("./paperhead.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
      width: 100%;
    } 
    #wrap {
      min-height: 400px;
      width: 100%;
      display:flex;
      flex-flow:row wrap;
      justify-content:flex-start;
      align-content:space-between;
      align-items:flex-start;

    }   
    #wraptext {
        width:100%;
        height:30%;
    }
    #msg,#msg1 {
      width:150px;
      margin-left: 10px;
    }    
    body {
      width: 100%;	
      background-image: url("./Jumbo.jpg");
      background-repeat: no-repeat, repeat;
      background-color: #cccccc;
      background-size: cover;
      z-index: 1;
      margin: 0;
      font-family: Georgia, serif;
      font-style: italic;
    }
}   

